--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     </Header>
     <main>
         <section>
-            <img src="" alt="shoes1">
+            <img src="img/01.png" alt="shoes1">
             <h1>
                 Lorem ipsum dolor
             </h1>
         </section>
         <section>
-            <img src="" alt="shoes2">
+            <img src="img/02.png" alt="shoes2">
             <h1>
                 Lorem ipsum dolor
             </h1>
         </section>
         <section>
-            <img src="" alt="shoes3">
+            <img src="img/03.png" alt="shoes3">
             <h1>
                 Lorem ipsum dolor
             </h1>
