organizzazione struttura e primo dimensionamento degli elementi

--- a/index.html
+++ b/index.html
@@ -20,22 +20,19 @@
                 3
             </button>
         </nav>
+        <section class="flex">
+            <h1>
+                Lorem ipsum dolor
+            </h1>
+        </section>
     </Header>
     <main>
-        <section>
-            <img src="img/01.png" alt="shoes1">
+        <section class="flex">
             <h1>
                 Lorem ipsum dolor
             </h1>
         </section>
-        <section>
-            <img src="img/02.png" alt="shoes2">
-            <h1>
-                Lorem ipsum dolor
-            </h1>
-        </section>
-        <section>
-            <img src="img/03.png" alt="shoes3">
+        <section class="flex">
             <h1>
                 Lorem ipsum dolor
             </h1>
