dimensionamento testi e immagine background scarpe

--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
     <Header>
-        <nav>
-            <button>
-                1
-            </button>
-            <button>
-                2
-            </button>
-            <button>
-                3
-            </button>
-        </nav>
-        <section class="flex">
-            <h1>
+        <section>
+            <nav>
+                <button>
+                    1
+                </button>
+                <button>
+                    2
+                </button>
+                <button>
+                    3
+                </button>
+            </nav>
+            <h1 class="flex">
                 Lorem ipsum dolor
             </h1>
         </section>
     </Header>
     <main>
-        <section class="flex">
-            <h1>
+        <section>
+            <h1 class="flex">
                 Lorem ipsum dolor
             </h1>
         </section>
-        <section class="flex">
-            <h1>
+        <section>
+            <h1 class="flex">
                 Lorem ipsum dolor
             </h1>
         </section>
