impostazione posizione e misura testo

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 </button>
             </nav>
             <h1 class="flex">
-                Lorem ipsum dolor
+                Il nostro modello di punta
             </h1>
         </section>
     </Header>
     <main>
         <section>
             <h1 class="flex">
-                Lorem ipsum dolor
+                Il nostro modello di punta
             </h1>
         </section>
         <section>
             <h1 class="flex">
-                Lorem ipsum dolor
+                Il nostro modello di punta
             </h1>
         </section>
     </main>
